--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-HELP.md
 target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
@@ -33,3 +32,7 @@ build/
 .vscode/
 
 /media
+
+.env
+
+LOCAL.md
